fixed the spacing wrapped around the border in css

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ li {
   border-radius: 5px;
 }
 
+.overview {
+  margin-bottom: 20px;
+}
+
 .weather-temperature img {
   margin-top: -20px;
   margin-right: -15px;
